- Fixed invisible #sourcename on IE6

--- a/skins/default/ie6hacks.css
+++ b/skins/default/ie6hacks.css
@@ -162,3 +162,8 @@ body.iframe .boxtitle
 {
   width: auto;
 }
+
+#sourcename
+{
+  zoom: 1;
+}
